16 August 2001
	- Added STS instructions for FPU
	- Added FTRC to SHCpu::executeInstruction (function was already written, just
	  not mentioned in the right place)
13 August 2001
	- Marcus Comstedt's maple bus example works - maple bus support is still in
	  "early hack" stage
	- Improved Gpu's reusage of back buffers - when reusing a backbuffer, now
	  checks to see whether the screen is in the right mode
10 August 2001
	- Can now specify name of branch trace log file with debugger's "trb" command
	- Added "f" ("finish") command to debugger, allows user to run until the next
	  rts or rte
	- Minor aesthetic cleanups
5 July 2001
	- Got rid of Makefiles and the autoconf, automake stuff that went along
	  with it in favor of Jamfiles
	- Since I know how to use Jamfiles slightly better than the monstrous
	  Makefiles generated by KDevelop, started using nasm again instead of gas
	- No longer using KDevelop for development since I replaced make with jam
	- Started reimplementing MAC.L in assembly - haven't tested it yet
	- Made status messages look better
	- General minor cleanups
	- Fixed bug in BF/S and BT/S where delay slot would be executed before
	  these instructions check SR.T (problems arose when delay slot modified this
		flag)
	- Added incomplete ROM font that only has ASCII glyphs and only space for
	  first 288 (narrow) characters allocated
	- Added "stat" command to debugger, which toggles status messages on and off
	- This required making a print() function in Debugger that should now be
	  used for debugging-type status info instead of printf
	- By this point I've stopped caring about maintaining a Win32 version
15 April 2001
	- Integrated Lars Olsson's dcdis, using it as the disassembler.  This allows
	  the removal of the stupid Debugger::disasmOn variable as well as the stupid
	  DIS macros.
	- Added "uf" command to debugger.  This unassembles the instruction following
	  PC, which would be the delay slot if PC points to a branch instruction.