@@ -42,10 +42,10 @@ int main(int argc, char *argv[])
 	cpu = new SHCpu();
 	Overlord *o = new Overlord(cpu);
 
+#if 0
 	// load the boot ROM
 	printf("Loading boot ROM...");
 	o->load("../fakebootrom/fbr.bin", 0xA0000000);
-	//o->load("../images/fbr.bin", 0xa0000000);
 	printf("done.\n");
 
 	// load the flash memory
@@ -55,15 +55,18 @@ int main(int argc, char *argv[])
 
 	// load the images we're going to run
 	printf("Loading images...");
-	//o->loadIso("ip.bin", 0x8c008000);
 	o->load("../images/IP.BIN", 0x8c008000);
-	//o->load("../images/video.bin", 0x8c010000);
-	o->loadSrec("../images/stars.srec");
+	//o->load("../images/dreampac_unscrambled.bin", 0x8c010000);
+	//o->loadSrec("../images/stars.srec");
 	//o->loadSrec("../images/mapletest.srec");
 	//o->loadSrec("../images/videotest.srec");
 	//cpu->gdrom->startSector(0);
 	//cpu->gdrom->load("something.iso");
 	printf("done.\n");
+#endif
+	printf("Executing autoexec.script...\n");
+	if(cpu->debugger->runScript("autoexec.script") == false)
+		printf("Couldn't find autoexec.script!\n");
 
 	printf("Fasten your seatbelts.\n\n");
 	// PC should be 0xA0000000 at this point
